ejabberd (2.0.1-3) unstable; urgency=low

  [ Sergei Golovan ]
  * Synced mod_ctlextra module with upstream (closes: #488991).
  * Updated Portuguese debconf templates translation (closes: #487822).
  * Switched off autoupdating debian/control by cdbs to make
    build-dependencies consistent.
  * Added Swedish debconf templates translation (closes: #490681).
  * Updated Russian debconf templates translation.
  * Updated Spanish debconf templates translation.
  * Added Galician debconf templates translation (closes: #490855).
  * Added Vietnamese debconf templates translation (closes: #491056).
  * Cleaned up LDAPS patch and fixed a bug with leaking SSL sockets
    (closes: #490059).

  [ Torsten Werner ]
  * Updated German debconf templates translation.

 -- Sergei Golovan <sgolovan@debian.org>  Thu, 17 Jul 2008 20:10:31 +0400

ejabberd (2.0.1-2) unstable; urgency=low

  * Improved a patch which removes message rejecting intervals for
    server-to-server recipients.
  * Bumped standards version to 3.8.0.

 -- Sergei Golovan <sgolovan@debian.org>  Fri, 20 Jun 2008 10:07:29 +0400

ejabberd (2.0.1-1) unstable; urgency=low

  * New upstream bugfix release.
  * Refreshed patches, removed those which were included into upstream.
  * Added _2 suffix to get-orig-source target in debian/rules (temporarily).
  * Fixed debian/watch to cover current release version (with _2 suffix).
  * Fixed mod_ctlextra to work with ejabberd 2.0.1 (changed session record
    definition).
  * Added new ejabberdctl commands (both new in 2.0.1 and in mod_ctlextra)
    to ejabberdctl manual page.
  * Changed restart branch in init.d script to perform full Erlang VM stop
    and start again (this allows to apply changes in /etc/default/ejabberd
    if any during ejabberd restart).
  * Clarified -sname and -name Erlang option usage by ejabberd and ejabberdctl
    in their manual pages (closes: #482904).
  * Added BUGS section to ejabberd manual page with a short description of