@@ -6,17 +6,23 @@ ejabberd (2.0.1-3) unstable; urgency=low
   * Switched off autoupdating debian/control by cdbs to make
     build-dependencies consistent.
   * Added Swedish debconf templates translation (closes: #490681).
-  * Updated Russian debconf templates translation.
+  * Updated Russian debconf templates translation (closes: #491424).
   * Updated Spanish debconf templates translation.
   * Added Galician debconf templates translation (closes: #490855).
   * Added Vietnamese debconf templates translation (closes: #491056).
   * Cleaned up LDAPS patch and fixed a bug with leaking SSL sockets
     (closes: #490059).
+  * Don't return from init script until at least Erlang VM is started to make
+    subsequent checks for running ejabberd simpler.
+  * Added an additional check for starting Erlang VM and don't try to register
+    admin user if ejabberd isn't started. This allows to shorten waiting
+    interval during upgrade if it isn't desirable to start ejabberd
+    automatically (closes: #462357).
 
   [ Torsten Werner ]
   * Updated German debconf templates translation.
 
- -- Sergei Golovan <sgolovan@debian.org>  Thu, 17 Jul 2008 20:10:31 +0400
+ -- Sergei Golovan <sgolovan@debian.org>  Sat, 19 Jul 2008 12:14:56 +0400
 
 ejabberd (2.0.1-2) unstable; urgency=low
 
